@@ -17,9 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,11 +28,6 @@ public class GrupoService {
     private final MiembrosGrupoRepository miembrosGrupoRepository;
     private final PermisosGrupoRepository permisosGrupoRepository;
 
-    /**
-     * Devuelve todos los grupos a los que pertenece el usuario:
-     * los que creó + los que integra como miembro (sin duplicados).
-     * Mantiene compatibilidad con clientes existentes.
-     */
     @Transactional(readOnly = true)
     public List<Grupo> obtenerGruposDelUsuario(String email) {
         List<Grupo> comoCreador = grupoRepository.findByCreador_Email(email);
@@ -56,27 +49,19 @@ public class GrupoService {
         }
     }
 
-    /** Grupos Creados por Mí: grupos donde el usuario autenticado es el administrador/creador (contexto Propietario). */
     @Transactional(readOnly = true)
     public List<Grupo> obtenerGruposCreados(String email) {
         return grupoRepository.findByCreador_Email(email);
     }
 
-    /** Grupos a los que pertenezco: grupos donde el usuario es solo miembro, no creador (contexto Miembro). */
     @Transactional(readOnly = true)
     public List<Grupo> obtenerGruposComoMiembro(String email) {
         return miembrosGrupoRepository.findGruposComoMiembroNoCreador(email);
     }
 
-    /**
-     * Devuelve el detalle de un único grupo.
-     * Lanza {@link AccessDeniedException} (→ 403) si el solicitante no es creador ni miembro.
-     * Lanza {@link NoSuchElementException} (→ 404) si el grupo no existe.
-     */
     @Transactional(readOnly = true)
     public Grupo obtenerDetalle(Long idGrupo, String email) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
 
         verifyGrupoAccess(grupo, email);
         return grupo;
@@ -97,26 +82,20 @@ public class GrupoService {
         }
     }
 
-    /**
-     * Lista los miembros de un grupo.
-     * Solo accesible si el solicitante es creador o miembro del grupo.
-     */
     @Transactional(readOnly = true)
     public List<MiembroDto> obtenerMiembros(Long idGrupo, String email) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
         verifyGrupoAccess(grupo, email);
 
         return miembrosGrupoRepository.findUsuariosByGrupoId(idGrupo)
                 .stream()
                 .map(u -> new MiembroDto(u.getIdUsuario(), u.getNombreCompleto(), u.getEmail()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public Grupo crearGrupo(String emailCreador, String nombre) {
-        Usuario creador = userRepository.findByEmail(emailCreador)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+        Usuario creador = userRepository.getByEmailOrThrow(emailCreador);
         Grupo grupo = new Grupo();
         grupo.setNombre(nombre);
         grupo.setCreador(creador);
@@ -125,12 +104,10 @@ public class GrupoService {
 
     @Transactional
     public void aniadirMiembro(Long idGrupo, String emailSolicitante, String emailInvitado) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
         verifyCreadorOnly(grupo, emailSolicitante, "añadir miembros");
 
-        Usuario invitado = userRepository.findByEmail(emailInvitado)
-                .orElseThrow(() -> new NoSuchElementException("Usuario no encontrado: " + emailInvitado));
+        Usuario invitado = userRepository.getByEmailOrThrow(emailInvitado);
 
         MiembrosGrupoId miembroId = new MiembrosGrupoId(invitado.getIdUsuario(), idGrupo);
         if (miembrosGrupoRepository.existsById(miembroId)) {
@@ -141,42 +118,27 @@ public class GrupoService {
         miembrosGrupoRepository.save(miembro);
     }
 
-    /**
-     * Elimina un miembro del grupo. Solo el creador puede expulsar miembros.
-     * Lanza {@link AccessDeniedException} (→ 403) si el solicitante no es el creador.
-     */
     @Transactional
     public void eliminarMiembro(Long idGrupo, Long idUsuario, String emailSolicitante) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
         verifyCreadorOnly(grupo, emailSolicitante, "eliminar miembros");
 
         miembrosGrupoRepository.deleteByGrupoIdAndUsuarioId(idGrupo, idUsuario);
     }
 
-    /**
-     * Renombra un grupo. Solo el creador puede cambiar el nombre.
-     * Lanza {@link AccessDeniedException} (→ 403) si el solicitante no es el creador.
-     */
     @Transactional
     public Grupo renombrarGrupo(Long idGrupo, String nuevoNombre, String emailSolicitante) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
         verifyCreadorOnly(grupo, emailSolicitante, "cambiar su nombre");
 
         grupo.setNombre(nuevoNombre.trim());
         return grupoRepository.save(grupo);
     }
 
-    /**
-     * Elimina un grupo y todas sus relaciones (miembros y permisos de vídeo).
-     * Solo el creador puede eliminar el grupo.
-     * Los vídeos asignados al grupo NO se eliminan; quedan como privados.
-     */
+    /** Los vídeos asignados al grupo quedan como privados al eliminarlo. */
     @Transactional
     public void eliminarGrupo(Long idGrupo, String emailSolicitante) {
-        Grupo grupo = grupoRepository.findById(idGrupo)
-                .orElseThrow(() -> new NoSuchElementException("Grupo no encontrado: " + idGrupo));
+        Grupo grupo = grupoRepository.getByIdOrThrow(idGrupo);
         verifyCreadorOnly(grupo, emailSolicitante, "eliminarlo");
 
         miembrosGrupoRepository.deleteByGrupoId(idGrupo);
